--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -8,7 +8,11 @@
     font-family: 'Poppins', sans-serif;}
 body {
     margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
+    position: relative;
+    height: 100vh;
+    box-sizing: border-box;
 }
 header {
     background-color: #1e6ce1;
@@ -45,7 +49,7 @@ nav a {
 
 nav a:hover {
     transform: scale(1.1);
-    border-left: 3px solid rgb(254, 252, 252);
+    border-bottom: 3px solid var(--secondary-color);
     color: var(--secondary-color);
 }
 .divPortDrkHeader {
@@ -71,28 +75,27 @@ nav a:hover {
 }
 
 .DivContentPrftlHEader {
-    width: 23rem;
-    margin: 10px 0;
-    height: fit-content;
-}
-.DivContentPrftlHEader {
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 23rem;
+    background-color: #a8b1c2;
+    padding: 20px;
+    margin-top: 60px;
 }
 .ProtflOfHeader {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    background-color: #a8b1c2;
-    width: 18rem;
     flex-direction: column;
     position: absolute;
-    display: none;
-    padding: 50px 60px;
+    height: 100%;
     transition-duration: .5s;
+}
+@keyframes menu {
+    
+    
 }
 .ProtflOfHeader h3 {
     font-size: 1.6rem;
@@ -101,18 +104,15 @@ nav a:hover {
     margin-top: 2rem;
 }
 .imgLogoPort {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: 130px;
     height: 130px;
-    padding-right: 5rem;
 }
 .imgAndRmv {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 15rem;
+    width: 100%;
+    gap: 150px;
 }
 .imgAndRmv i {
     color: var(--secondary-color);
