--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -170,3 +170,35 @@ nav a:hover {
 }
 
 
+footer {
+    width: 100%;
+    height: 25rem;
+    background: #8d8989;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: ;
+}
+footer h1 {
+    font-size: 22px;
+    border-bottom: 5px solid var(--secondary-color);
+    width: 10rem;
+
+}
+.Contentfooter {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    gap: 15rem;
+    border: #1e6ce1 solid 2px;
+    width: 80%;
+}
+.Contentfooter div {
+    border: 2px solid ;
+    border-color: grad;
+    height: 100%;
+}
+.smallContent {
+    height: 100%;
+    width: 14rem;
+}
