--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -6,7 +6,7 @@
 }
 * {
     font-family: 'Poppins', sans-serif;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 body {
     margin: 0;
