--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -155,25 +155,21 @@ nav a:hover {
 .AbotAnddivLInfos.social i:hover{
         color:var(--secondary-color) ;
 }
-
-
-
-
-
-
-
 /* section metier article */
 .metierArticle {
     background-color: var(--secondary-color);
     color: #fff;
-    height: 6rem;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     border-bottom-left-radius: 13%;
     border-bottom-right-radius: 5%;
 }
-
+svg{
+    width: 50px;
+    height: 50px;
+}
 /* footer */
 footer {
     width: 100%;
