--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -40,12 +40,13 @@ nav a {
     font-family: 'Poppins', sans-serif;
     transition: ease 0.3s;
     position: relative;
+    padding-left: 5px;
 }
 
 nav a:hover {
     transform: scale(1.1);
     color: var(--secondary-color);
-    border-bottom: 3px solid var(--secondary-color);
+    border-left: 3px solid var(--secondary-color);
 }
 
 .divPortDrkHeader {
@@ -165,15 +166,20 @@ nav a:hover {
     justify-content: center;
     border-bottom-left-radius: 13%;
     border-bottom-right-radius: 5%;
+    height: 8rem;
+    position: relative;
+    box-shadow: 2px 2px 17px var(--secondary-color);
 }
 svg{
     width: 50px;
     height: 50px;
+    color: rgb(255, 230, 0);
+    opacity: .8;
 }
 /* footer */
 footer {
     width: 100%;
-    /* height: 25rem; */
+    height: 25rem;
     background: #8d8989;
     display: flex;
     align-items: center;
