--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -74,7 +74,7 @@ nav a:hover {
     display: none;
     padding: 20px;
     z-index: 99;
-    height: calc(100% - 40px);
+    height: fit-content;
     animation: menuanimopen ease 1s;
 }
 @keyframes menuanimopen {
