--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -25,7 +25,6 @@ header {
 }
 img {
     height: 50px;
-    margin-right: 10px;
 }
 nav {
     display: flex;
@@ -70,12 +69,16 @@ nav a:hover {
 #Menu{
     width: 23rem ;
     background-color: #a8b1c2;
-    position: absolute;
+    position: fixed;
     display: none;
     padding: 20px;
     z-index: 99;
-    height: fit-content;
+    height: 100%;
+    overflow: scroll;    
     animation: menuanimopen ease 1s;
+}
+.Menu-all{
+    padding: 20px 0;
 }
 @keyframes menuanimopen {
     0%{
@@ -176,6 +179,60 @@ svg{
     color: rgb(255, 230, 0);
     opacity: .8;
 }
+
+
+
+/* section Articles */
+.sectionArticles {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 2px solid gray;
+    height: fit-content;
+}
+.sectionArticles img {
+    width: 100%;
+    height: 13rem;
+    border-radius: 10px;
+    margin: none;
+}
+.articles {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+}
+.article {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 2px 2px 25px rgb(190, 190, 190);
+    border-radius: 15px;
+    padding: 1rem;
+    height: fit-content;
+}
+.article .date {
+    border: 2px solid gray;
+    padding: 3px 7px;
+    border-radius: 15px;
+    font-size: 13px;
+}
+.dateAndtitlearticl {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.description{
+    width: 350px;
+}
+.articledatediscription{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 /* footer */
 footer {
     width: 100%;
