--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -180,6 +180,68 @@ svg{
     opacity: .8;
 }
 
+/* sercle */
+.serceles {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cercle1 {
+    margin: 20px 0px;
+    border-radius: 20% 50% 10% 50%;
+    width: 14rem;
+    height: 14rem;
+    background: var(--secondary-color);
+    background: linear-gradient(rgb(24, 26, 101),rgb(213, 198, 32));
+    animation: cercleanim 10s ease-in-out infinite alternate; /* Added infinite and alternate for continuous animation */
+}
+.cercle2 {
+    margin: 20px 0px;
+    border-radius: 20% 50% 10% 50%;
+    width: 13rem;
+    height: 13rem;
+    background: var(--secondary-color);
+    background: linear-gradient(rgb(28, 23, 78),rgb(26, 26, 93));
+    animation: cercleanim2 10s ease-in-out infinite alternate; /* Added infinite and alternate for continuous animation */
+    margin-left: -14rem;
+}
+
+@keyframes cercleanim {
+    0% {
+        border-radius: 100% 60% 95% 100%;
+    }
+     25% {
+        border-radius: 100% 100% 60% 100%;
+    }
+    50% {
+        border-radius: 100% 100% 100% 50%;
+    }
+    75% {
+        border-radius: 40% 100% 100% 60%;
+    }
+    100% {
+        border-radius: 100% 50% 100% 100%;
+    }
+}
+@keyframes cercleanim2 {
+    0% {
+        border-radius: 100% 60% 95% 100%;
+    }
+     25% {
+        border-radius: 100% 100% 60% 100%;
+    }
+    50% {
+        border-radius: 100% 100% 100% 50%;
+    }
+    75% {
+        border-radius: 40% 100% 100% 60%;
+    }
+    100% {
+        border-radius: 100% 50% 100% 100%;
+    }
+}
+
 
 
 /* section Articles */
@@ -195,7 +257,7 @@ svg{
 .sectionArticles img {
     width: 100%;
     height: 13rem;
-    border-radius: 10px;
+    border-radius: 12px;
     margin: none;
 }
 .articles {
