--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -193,7 +193,7 @@ svg{
     width: 14rem;
     height: 14rem;
     background: var(--secondary-color);
-    background: linear-gradient(rgb(24, 26, 101),rgb(213, 198, 32));
+    background: linear-gradient(rgb(24, 26, 101),rgb(255, 204, 0));
     animation: cercleanim 10s ease-in-out infinite alternate; /* Added infinite and alternate for continuous animation */
 }
 .cercle2 {
@@ -205,6 +205,10 @@ svg{
     background: linear-gradient(rgb(28, 23, 78),rgb(26, 26, 93));
     animation: cercleanim2 10s ease-in-out infinite alternate; /* Added infinite and alternate for continuous animation */
     margin-left: -14rem;
+    background-image: url(femmecasiste.webp);
+    background-position: 50%;
+    background-size: 20rem;
+    background-repeat: no-repeat;
 }
 
 @keyframes cercleanim {
@@ -243,7 +247,6 @@ svg{
 }
 
 
-
 /* section Articles */
 .sectionArticles {
     width: 100%;
@@ -251,12 +254,11 @@ svg{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 2px solid gray;
     height: fit-content;
 }
 .sectionArticles img {
     width: 100%;
-    height: 13rem;
+    height: 19rem;
     border-radius: 12px;
     margin: none;
 }
@@ -274,7 +276,9 @@ svg{
     border-radius: 15px;
     padding: 1rem;
     height: fit-content;
+    width: 22rem;
 }
+
 .article .date {
     border: 2px solid gray;
     padding: 3px 7px;
