--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -18,10 +18,13 @@ body {
     height: fit-content;
 }
 header {
+    position: fixed;
     display: flex;
     background-color: #1e6ce1;
     justify-content: space-between;
     align-items: center;
+    z-index: 98;
+    width: 100%;
 }
 img {
     height: 50px;
@@ -71,7 +74,7 @@ nav a:hover {
     background-color: #a8b1c2;
     position: fixed;
     display: none;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     z-index: 99;
     height: 100%;
     overflow: scroll;    
@@ -140,7 +143,6 @@ nav a:hover {
     transform: scale(1.05);
 }
 .AbotAnddivLInfos {
-    flex-direction: column;
     width: 100%;
 }
 .AbotAnddivLInfos i {
@@ -149,6 +151,7 @@ nav a:hover {
 } 
 .AbotAnddivLInfos.social {
     flex-direction: row;
+    padding-bottom: 40px;
 } 
 .AbotAnddivLInfos.social i{
     /* cursor: pointer; */
@@ -172,6 +175,7 @@ nav a:hover {
     height: 8rem;
     position: relative;
     box-shadow: 2px 2px 17px var(--secondary-color);
+    padding-top: 40px;
 }
 svg{
     width: 50px;
@@ -264,10 +268,10 @@ svg{
 }
 .articles {
     display: flex;
-    flex-direction: row;
     gap: 5rem;
 }
 .article {
+    width: 22rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -276,7 +280,6 @@ svg{
     border-radius: 15px;
     padding: 1rem;
     height: fit-content;
-    width: 22rem;
 }
 
 .article .date {
