--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -26,8 +26,11 @@ header {
     z-index: 98;
     width: 100%;
 }
-img {
-    height: 50px;
+header img {
+    height: 65px;
+    width: 6rem;
+    background: #ffffff;
+    border-bottom-right-radius: 10px;
 }
 nav {
     display: flex;
@@ -280,6 +283,12 @@ svg{
     border-radius: 15px;
     padding: 1rem;
     height: fit-content;
+    transition: .1s ease;
+}
+.article:hover {
+    /* transform: scale(1.02); */
+    /* border: var(--secondary-color) 2px solid; */
+    border-left: 3px solid var(--secondary-color);
 }
 
 .article .date {
@@ -316,6 +325,10 @@ footer h1 {
     font-size: 22px;
     border-bottom: 5px solid rgb(25, 38, 100);
     width: 10rem;
+}
+footer img {
+    height: 7rem;
+    width: 9rem;
 }
 .Contentfooter {
     display: flex;
