--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -287,14 +287,13 @@ svg{
     box-shadow: 2px 2px 25px rgb(190, 190, 190);
     border-radius: 15px;
     padding: 1rem;
-    height: fit-content;
+    height: auto;
     transition: .1s ease;
 }
 .article:hover {
     /* transform: scale(1.02); */
     /* border: var(--secondary-color) 2px solid; */
     border-left: 3px solid var(--secondary-color);
-
     height: auto;
 }
 
@@ -376,10 +375,13 @@ footer img {
     flex-direction: column;
     padding: 3rem;
     border: 3px solid rgba(0, 0, 0, 0);
-    border-radius: 2rem;
+    border-radius: 15px;
     margin: 7rem;
     box-shadow: 2px 2px 15px rgb(172, 171, 171);
 
+}
+.MapsSection:hover{
+    border-left: 3px solid var(--secondary-color);
 }
 .maps{
     display: flex;
