--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -61,10 +61,18 @@ nav a:hover {
 }
 .Bars{
     display: none;
+    color: white;
+    cursor: pointer;
+    transition: ease-in-out 0.5s;
+}
+.Bars:hover{
+    color: #192664;
 }
 .fa-regular {
     cursor: pointer;
     font-size:1.8rem;
+    color: white;
+
     transition: ease-in-out 0.5s;
 }
 .fa-regular:hover {
@@ -110,7 +118,6 @@ nav a:hover {
 }
 .AllMenusOpen{
     display: flex;
-    width: 100%;
 }
 .Navig ul li {
     list-style-type: none;
@@ -444,6 +451,26 @@ footer img {
 .maps iframe{
     width: 100%;
 }
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #192664; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #FFE600; 
+  }
 @media all and (max-width: 480px) {
     nav{
         display: none;
@@ -478,6 +505,12 @@ footer img {
     }
     .maps{
         flex-wrap: wrap;
+    }
+    #Menu{
+        width: 19rem ;
+    }
+    #Menu2{
+        width: 21rem ;
     }
 }
 @media all and (min-width: 480px) and (max-width: 768px) { 
