--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -25,7 +25,6 @@ header {
     background-color: var(--secondary-color);
     justify-content: space-between;
     align-items: center;
-    z-index: 98;
     width: 100%;
     box-sizing: border-box;
     padding: 0 20px 0 0;
@@ -238,6 +237,8 @@ nav a:hover {
     justify-content: center;
     gap: 30rem;
     box-sizing: border-box;
+    height: 100%;
+    padding-top: 65px;
 }
 .writFirstDiv {
     margin-left: -12rem;
@@ -292,7 +293,7 @@ nav a:hover {
 }
 /* section metier article */
 .metierArticle {
-    background-color: var(--secondary-color);
+    background-color: #192664;
     color: #fff;
     height: 100vh;
     display: flex;
@@ -303,7 +304,6 @@ nav a:hover {
     height: 8rem;
     position: relative;
     box-shadow: 2px 2px 17px var(--secondary-color);
-    padding-top: 60px;
 }
 .svgsec{
     position: relative;
@@ -610,13 +610,17 @@ footer img {
     }
     .writFirstDiv {
         font-size: 1.2rem;
-        padding-left: 4rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 0 20px 0;
     }
     .serceles {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: -20rem;
+        height: fit-content;
     }
     .cercle1 {
         margin: 20px 0px;
@@ -626,13 +630,15 @@ footer img {
         background: var(--secondary-color);
         background: linear-gradient(rgb(24, 26, 101),rgb(255, 204, 0));
         animation: cercleanim 10s ease-in-out infinite alternate; 
-        margin-top: 25rem;
     }
     .cercle2 {
         /* width: 23.8rem;
         height: 24rem; */
         width: 100%;
         height: 100%;
+    }
+    .GCP{
+        width: 100%;
     }
 }
 @media all and (min-width: 480px) and (max-width: 768px) { 
@@ -673,6 +679,22 @@ footer img {
         /* opacity: 1.3; */
         filter: none; /* Vous pouvez ajuster la valeur de "5px" selon le flou souhaité */
         backdrop-filter: blur(10px);
+    }
+    .HomeFirstSection {
+        flex-direction: column;
+        box-sizing: border-box;
+        gap: 5rem;
+    }
+    .writFirstDiv {
+        font-size: 1.2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 0 20px 0;
+    }
+    .serceles{
+        padding: 0;
     }
 }
 @media all and (min-width: 768px) and (max-width: 1024px) { 
