--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -61,6 +61,7 @@ nav a:hover {
     width: 60px;
     display: flex;
     gap: 20px;
+    width: fit-content;
 }
 .Bars{
     display: none;
@@ -551,6 +552,18 @@ footer img {
 ::-webkit-scrollbar-thumb:hover {
     background: #FFE600; 
 }
+.Menu-all ul li{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+.Menu-all ul li a{
+    color: #192664;
+    font-size: 20px;
+}
+.Menu-all ul li a:hover{
+    color: #1e6ce1;
+}
 @media all and (max-width: 480px) {
     nav{
         display: none;
@@ -696,6 +709,14 @@ footer img {
     .serceles{
         padding: 0;
     }
+    .cercle1 {
+        width: 20rem;
+        height: 20rem;
+    }
+    .cercle2 {
+        width: 100%;
+        height: 100%;
+    }
 }
 @media all and (min-width: 768px) and (max-width: 1024px) { 
     nav{
@@ -715,6 +736,20 @@ footer img {
     .MapsSection{
         margin: 20px;
     }
+    .HomeFirstSection{
+        gap: 14rem;
+    }
+    .cercle1 {
+        width: 20rem;
+        height: 20rem;
+    }
+    .cercle2 {
+        width: 100%;
+        height: 100%;
+    }
+    .serceles{
+        padding: 0;
+    }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
     .articles{
@@ -726,6 +761,9 @@ footer img {
     }
     .MapsSection{
         margin: 20px;
+    }
+    .HomeFirstSection{
+        gap: 16rem;
     }
 }
 
