--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -583,21 +583,30 @@ footer img {
 }
 .GCP{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .GCP h2{
     position: relative;
-    
+    width: fit-content;
 }
 .GCP img{
     position: absolute;
     width: 550px;
-    left: -67px;
-    top: -10px;
+    left: -35px;
+    top: 30px;
     filter: grayscale(100%) brightness(0%);
 
 }
 .untogglescroll{
     overflow: hidden;
+}
+.GCP p{
+    font-size: 20px;
+    max-width: 500px;
+    width: fit-content;
+    text-align: center;
 }
 @media all and (max-width: 480px) {
     nav{
@@ -686,19 +695,16 @@ footer img {
         width: 100%;
         height: 100%;
     }
-    .GCP{
-        width: 100%;
-    }
     .Socialss2{
         display: none;
     }
     .GCP img{
-        width: 380px;
+        width: 330px;
         top: 15px;
-        left: -50px;
+        left: 0;
     }
 }
-@media all and (min-width: 480px) and (max-width: 768px) { 
+@media all and (min-width: 480px) and (max-width: 820px) { 
     nav{
         display: none;
     }
@@ -767,10 +773,10 @@ footer img {
     .GCP img{
         width: 400px;
         top: 15px;
-        left: -60px;
+        left: 40px;
     }
 }
-@media all and (min-width: 768px) and (max-width: 1024px) { 
+@media all and (min-width: 820px) and (max-width: 1024px) { 
     nav{
         display: none;
     }
@@ -807,8 +813,8 @@ footer img {
     }
     .GCP img{
         width: 477px;
-        top: -5px;
-        left: -30px;
+        top: 30px;
+        left: -7px;
     }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
