--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -7,6 +7,14 @@
 * {
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+    /* border: 1px solid; */
+}
+p {
+    cursor: default;
+}
+h3 ,h2, h1 {
+    cursor: default;
+
 }
 button {
     cursor: pointer;
@@ -238,9 +246,9 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    height: 100%;
+    height: 75vh;
     padding-top: 65px;
-    gap: 20rem;
+    gap: 25rem;
     width: 100%;
 }
 .writFirstDiv {
@@ -268,7 +276,7 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 7rem;
+    padding-top: 4rem;
 }
 
 .cercle1 {
@@ -306,6 +314,7 @@ nav a:hover {
     height: 8rem;
     position: relative;
     box-shadow: 2px 2px 17px var(--secondary-color);
+    padding-bottom: 3rem;
 }
 .svgsec{
     position: relative;
@@ -357,7 +366,50 @@ svg{
     }
 }
 
+/* 3 divs de qualité */
+.divProSuivi {
+    width: 100%;
+    box-sizing: border-box;
+    height: 20rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin: 3rem 0;
+    margin-top: -3rem;
+}
 
+.divProSuivi div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 70px 20px;
+    width: 20%;
+    border-bottom-right-radius: 35px;
+    border-top-left-radius: 35px;
+   background: linear-gradient(rgb(61, 48, 28),rgb(35, 36, 43));
+    transition: .5s;
+    cursor: pointer;
+    z-index: 50;
+    color: #fff;
+}
+.divProSuivi div:hover {
+    background-image: url(bgdivPro.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
+    background-color: rgba(115, 98, 98, 0.5); /* Set the background color with transparency */
+    backdrop-filter: opacity(10%); /* Set the opacity of the background using backdrop-filter */
+    transform: scale(1.09);
+}
+
+
+.divProSuivi div p {
+    margin-top: -10px;
+    font-size: .9rem;
+
+}
 /* section Articles */
 .sectionArticles {
     width: 100%;
@@ -571,7 +623,8 @@ footer img {
     align-items: center;
     transform: rotate(90deg);
     gap: 15px;
-    right: -70px;
+    right: -50px;
+    margin-top: 14rem;
 }
 .Socialss2 h3{
     margin: 0;
