--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -452,7 +452,10 @@ svg{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid;
+    width: 100%;
+    /* border: 2px solid; */
+    margin: 25px 0 ;
+    box-sizing: border-box;
 }
 .containerReview {
     display: flex;
@@ -461,8 +464,9 @@ svg{
     flex-direction: row;
     border: #d8d5d55f 8px solid;
     height: 60%;
-    width: 70%;
+    /* width: 70%; */
     padding: 2rem;
+    margin:0  30px;
 }
 .smallContainerReview {
     height: 100%;
@@ -473,27 +477,27 @@ svg{
     color: #fff;
 }
 .reviewDiv {
-    width: 35%;
+    width: 30%;
     background-image: url(femmecasiste.webp);
     box-sizing: border-box;
-    height: 110%;
+    height: 23rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: none;
     border-top-right-radius: 100px;
-    display: flex;
+    display: block;
     align-self: end;
 }
 .ReviewInfo{
     box-sizing: border-box;
-    width: 60%;
+    width: 70%;
     height: 100%;
     display: flex;
     justify-content: center;
     text-align: start;
     flex-direction: column;
-    padding: 2rem 3rem;
+    padding: 1.3rem;
 }
 .ReviewInfo p {
     line-height: 30px;
@@ -505,8 +509,8 @@ svg{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 13%;
-    width: 10%;
+    height: 40px;
+    width: 60px;
 }
 /* 3 divs de qualité */
 .divProSuivi {
@@ -782,10 +786,12 @@ footer img {
     cursor: pointer;
 }
 .GCP{
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.GCP-Title{
+    position: relative;
 }
 .GCP h2{
     position: relative;
@@ -793,9 +799,9 @@ footer img {
 }
 .GCP img{
     position: absolute;
-    width: 550px;
-    left: -35px;
-    top: 30px;
+    width: 560px;
+    left: -80px;
+    top: 25px;
     filter: grayscale(100%) brightness(0%);
 }
 .untogglescroll{
@@ -900,6 +906,8 @@ footer img {
     }
     .GCP img{
         width: 330px;
+        left: -35px;
+        top: 20px;
     }
     .divProSuivi{
         height: fit-content;
@@ -913,6 +921,18 @@ footer img {
     .galerie {
         height: 25rem;
         width: 22rem;
+    }
+    .reviewDiv{
+        display: none;
+    }
+    .ReviewInfo{
+        width: 100%;
+    }
+    .smallContainerReview{
+        height: fit-content;
+    }
+    .containerReview{
+        height: fit-content;
     }
 }
 @media all and (min-width: 480px) and (max-width: 820px) { 
@@ -971,10 +991,13 @@ footer img {
         padding: 0;
     }
     .cercle1 {
+        display: none;
+
         width: 20rem;
         height: 20rem;
     }
     .cercle2 {
+        display: none;
         width: 100%;
         height: 100%;
     }
@@ -984,7 +1007,7 @@ footer img {
     .GCP img{
         width: 400px;
         top: 15px;
-        left: 40px;
+        left: -60px;
     }
     .divProSuivi{
         height: fit-content;
@@ -1003,7 +1026,18 @@ footer img {
         height: 27rem;
         width: 27rem;
     }
-
+    .reviewDiv{
+        display: none;
+    }
+    .ReviewInfo{
+        width: 100%;
+    }
+    .smallContainerReview{
+        height: fit-content;
+    }
+    .containerReview{
+        height: fit-content;
+    }
 }
 @media all and (min-width: 820px) and (max-width: 1024px) { 
     nav{
@@ -1043,7 +1077,19 @@ footer img {
     .GCP img{
         width: 477px;
         top: 30px;
-        left: -7px;
+        left: -37px;
+    }
+    .reviewDiv{
+        display: none;
+    }
+    .ReviewInfo{
+        width: 100%;
+    }
+    .smallContainerReview{
+        height: fit-content;
+    }
+    .containerReview{
+        height: fit-content;
     }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
