review styling section

--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -87,8 +87,12 @@ nav a:hover {
     color: white;
     transition: ease-in-out 0.5s;
 }
-.fa-regular:hover {
+/* .fa-regular:hover {
     color: var(--secondary-color);
+} */
+.fa-regular.fa-chart-bar:hover {
+    transform: rotate(-90deg);
+    color: white;
 }
 .fa-solid  {
     cursor: pointer;
@@ -105,7 +109,8 @@ nav a:hover {
     height: 100%;
     overflow: scroll;    
     animation: menuanimopen ease 1s;
-    background: linear-gradient( to bottom,rgb(235, 239, 255),rgb(25, 37, 100));
+    /* background: linear-gradient( to bottom,rgb(235, 239, 255),rgb(25, 37, 100)); */
+    background-color: #1b1d23;
     color: #fff;
 
 }
@@ -386,6 +391,7 @@ svg{
     box-sizing: border-box;
     transform: rotate(45deg); 
     padding-top: -3rem;
+    cursor: default;
 }
 .titlegalry {
     display: flex;
@@ -393,11 +399,17 @@ svg{
     align-items: center;
     margin-bottom: -2rem;
 }
+.titlegalry img {
+    width: 30%;
+}
 .titlegalry h2 {
-    margin-left: -12rem;
+    margin-left: -13.9rem;
 }
 .divTipgallery {
     text-align: center;
+}
+.titlegalry.galry {
+    margin-bottom: -1rem;
 }
 .galerie {
     height: 40rem;
@@ -448,14 +460,43 @@ svg{
 /* review */
 .reviewsSec {
     height: 80vh;
-    /* background-color: #3d3d3e; */
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    /* border: 2px solid; */
     margin: 25px 0 ;
     box-sizing: border-box;
+    flex-direction: column;
+}
+.reviewsSec i {
+    cursor: default;
+}
+.iOfreview {
+    position: absolute;
+    color: rgb(195, 193, 193);
+    margin-left: 70%;
+    transform: rotate(90deg);
+    margin-top: -25rem;
+    font-size: 4rem;   
+}
+ .iOfreview2 {
+    color: #8d8989;
+    transform: rotate(90deg);
+    box-sizing: border-box;
+    position: absolute;
+    margin: 20rem 0rem 0rem 30rem; 
+    opacity: 0.4;
+    font-size: 5rem;
+} 
+.iOfreview:hover {
+    transform: rotate(180deg);
+    color: rgb(195, 193, 193);
+}
+.titlegalry {
+    margin-bottom: 3rem;
+}
+.titlegalry img {
+    width: 17rem;
 }
 .containerReview {
     display: flex;
@@ -467,6 +508,8 @@ svg{
     /* width: 70%; */
     padding: 2rem;
     margin:0  30px;
+    max-width: 70%;
+
 }
 .smallContainerReview {
     height: 100%;
@@ -478,9 +521,9 @@ svg{
 }
 .reviewDiv {
     width: 30%;
-    background-image: url(femmecasiste.webp);
+    background-image: url(Clientimage.jpg);
     box-sizing: border-box;
-    height: 23rem;
+    height: 27rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -488,6 +531,7 @@ svg{
     border-top-right-radius: 100px;
     display: block;
     align-self: end;
+    border: 1px solid ;
 }
 .ReviewInfo{
     box-sizing: border-box;
@@ -498,6 +542,7 @@ svg{
     text-align: start;
     flex-direction: column;
     padding: 1.3rem;
+    padding-left: 3.2rem;
 }
 .ReviewInfo p {
     line-height: 30px;
@@ -561,8 +606,13 @@ svg{
     box-sizing: border-box;
     padding: 0 50px;
     margin-top: 20px;
+    border-bottom: #64646438 1px solid;
+    padding-bottom: 50px;
 }
-.sectionArticles img {
+.titlegalry.articl h2{
+    margin-left: -12rem;
+}
+.articles img {
     width: 100%;
     height: 19rem;
     border-radius: 12px;
@@ -845,6 +895,12 @@ footer img {
     }
     .MapsSection{
         margin: 20px;
+        margin-top: 5rem;
+        /* color: #2949b4; */
+        background-color: #eaf2fe;
+    }
+    .MapsSection h2 {
+        font-size: 1.2rem;
     }
     .maps{
         flex-wrap: wrap;
@@ -934,6 +990,9 @@ footer img {
     .containerReview{
         height: fit-content;
     }
+    .reviewsSec {
+        height: 70vh;
+    }
 }
 @media all and (min-width: 480px) and (max-width: 820px) { 
     nav{
@@ -957,6 +1016,7 @@ footer img {
     }
     .MapsSection{
         margin: 20px;
+        margin-top: 5rem;
     }
     .maps{
         flex-wrap: wrap;
@@ -1056,6 +1116,7 @@ footer img {
     }
     .MapsSection{
         margin: 20px;
+        margin-top: 5rem;
     }
     .HomeFirstSection{
         gap: 14rem;
@@ -1102,6 +1163,8 @@ footer img {
     }
     .MapsSection{
         margin: 20px;
+        margin-top: 5rem;
+
     }
     .HomeFirstSection{
         gap: 16rem;
