--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -381,6 +381,7 @@ svg{
     gap: 3rem;
     padding: 40px;
     position: relative;
+
 }
 .galleryDiv i{
     font-size: 6rem;
@@ -392,18 +393,22 @@ svg{
     transform: rotate(45deg); 
     padding-top: -3rem;
     cursor: default;
+    z-index: 23;
 }
 .titlegalry {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: -2rem;
+    height: fit-content;
+    position: relative;
 }
 .titlegalry img {
     width: 30%;
+    position: absolute;
+    z-index: 22;
 }
 .titlegalry h2 {
-    margin-left: -13.9rem;
+    z-index: 23;
 }
 .divTipgallery {
     text-align: center;
@@ -418,6 +423,7 @@ svg{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: .5rem;
+    z-index: 24;
 }
 .galerie div {
     transition: .5s;
@@ -459,12 +465,10 @@ svg{
 
 /* review */
 .reviewsSec {
-    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 25px 0 ;
     box-sizing: border-box;
     flex-direction: column;
 }
@@ -602,16 +606,13 @@ svg{
 /* section Articles */
 .sectionArticles {
     width: 100%;
-    height: fit-content;
     box-sizing: border-box;
     padding: 0 50px;
     margin-top: 20px;
     border-bottom: #64646438 1px solid;
     padding-bottom: 50px;
 }
-.titlegalry.articl h2{
-    margin-left: -12rem;
-}
+
 .articles img {
     width: 100%;
     height: 19rem;
@@ -990,8 +991,8 @@ footer img {
     .containerReview{
         height: fit-content;
     }
-    .reviewsSec {
-        height: 70vh;
+    .iOfreview2{
+        display: none;
     }
 }
 @media all and (min-width: 480px) and (max-width: 820px) { 
@@ -1098,6 +1099,9 @@ footer img {
     .containerReview{
         height: fit-content;
     }
+    .iOfreview2{
+        display: none;
+    }
 }
 @media all and (min-width: 820px) and (max-width: 1024px) { 
     nav{
@@ -1151,6 +1155,10 @@ footer img {
     }
     .containerReview{
         height: fit-content;
+    }
+    .divProSuivi{
+        height: fit-content;
+        margin: -3rem 0 0 0 ;
     }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) { 
