--- a/cssFileGenius.css
+++ b/cssFileGenius.css
@@ -491,6 +491,7 @@ svg{
     margin: 20rem 0rem 0rem 30rem; 
     opacity: 0.4;
     font-size: 5rem;
+    z-index: 22;
 } 
 .iOfreview:hover {
     transform: rotate(180deg);
@@ -522,6 +523,7 @@ svg{
     align-items: center;
     background-color: #1b1d23;
     color: #fff;
+    position: relative;
 }
 .reviewDiv {
     width: 30%;
@@ -536,6 +538,7 @@ svg{
     display: block;
     align-self: end;
     border: 1px solid ;
+    z-index: 23;
 }
 .ReviewInfo{
     box-sizing: border-box;
@@ -866,6 +869,13 @@ footer img {
 }
 /*Phone*/
 @media all and (max-width: 480px) { 
+    .containerReview{
+        margin: 0;
+    }
+    .ReviewInfo{
+        padding: 0 10px;
+        text-align: center;
+    }
     nav{
         display: none;
     }
@@ -994,6 +1004,19 @@ footer img {
     .iOfreview2{
         display: none;
     }
+    .smallContainerReview{
+        display: flex;
+        flex-direction: column;
+    }
+    .reviewDiv{
+        width: 100px;
+        border-radius: 50%;
+        height: 100px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;  
+        margin-top: 20px;    
+    }
 }
 @media all and (min-width: 480px) and (max-width: 820px) { 
     nav{
@@ -1093,6 +1116,9 @@ footer img {
     .ReviewInfo{
         width: 100%;
     }
+    .ReviewInfo h3{
+        font-size: 16px;
+    }
     .smallContainerReview{
         height: fit-content;
     }
@@ -1102,7 +1128,30 @@ footer img {
     .iOfreview2{
         display: none;
     }
+    .reviewDiv{
+        display: flex;
+        width: 100px;
+        border-radius: 50%;
+        height: 100px;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+    }
 }
+
+/* for mr ahmed sami*/
+@media all and (min-width: 547px) and (max-width: 608px) { 
+    .ReviewInfo h3{
+        font-size: 13px;
+    }
+}
+@media all and (min-width: 479px) and (max-width: 546px) { 
+    .reviewDiv{
+        display: none;
+    }
+}
+
+
 @media all and (min-width: 820px) and (max-width: 1024px) { 
     nav{
         display: none;
@@ -1145,7 +1194,13 @@ footer img {
         left: -37px;
     }
     .reviewDiv{
-        display: none;
+        display: flex;
+        width: 100px;
+        border-radius: 50%;
+        height: 100px;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
     }
     .ReviewInfo{
         width: 100%;
